add: style homepage, partials scss, style routes restaurants & dishes

--- a/resources/scss/app.scss
+++ b/resources/scss/app.scss
@@ -1,2 +1,10 @@
 @import '~bootstrap/scss/bootstrap';
-@import './partials/notFound';
+@import './partials/_notFound';
+@import './partials/_header';
+@import './partials/homepage';
+@import './partials/variables';
+@import './partials/dashboard';
+
+
+
+    
