--- a/resources/scss/partials/_variables.scss
+++ b/resources/scss/partials/_variables.scss
@@ -5,6 +5,7 @@
 
 $header-bg:#1f17177b;
 $header-color:white;
+$boss-color:rgb(207, 4, 4);
 $homepage-color:white;
 $maxwidth:100%;
 $header-h:100px;
