--- a/resources/scss/app.scss
+++ b/resources/scss/app.scss
@@ -1,9 +1,10 @@
 @import '~bootstrap/scss/bootstrap';
 @import './partials/_notFound';
 @import './partials/_header';
-@import './partials/homepage';
-@import './partials/variables';
-@import './partials/dashboard';
+@import './partials/_homepage';
+@import './partials/_variables';
+@import './partials/_dashboard';
+@import './partials/_index-main';
 
 
 
