add style index-edit-show restaurant

--- a/resources/scss/app.scss
+++ b/resources/scss/app.scss
@@ -5,6 +5,8 @@
 @import './partials/_variables';
 @import './partials/_dashboard';
 @import './partials/_index-main';
+@import './partials/_show';
+@import './partials/_edit';
 
 
 
