--- a/resources/scss/partials/_homepage.scss
+++ b/resources/scss/partials/_homepage.scss
@@ -3,20 +3,18 @@
 .container-home {
     background-image: url('../img/homepage-bg.jpg');
     background-size: cover;
+    height: 100vh;
     .content-home {
-        height: calc(100vh - $header-h);
         color: $homepage-color;
         position: relative;
 
         h1 {
             opacity: 0;
         }
-
         .welcome-2 {
             opacity: 1;
             transform: translateY(200px);
             transition: opacity 3s, transform 3s;
-
 
         }
     }
