fix scss create restaurant and checkbox categories

--- a/resources/scss/app.scss
+++ b/resources/scss/app.scss
@@ -7,6 +7,7 @@
 @import './partials/_index-main';
 @import './partials/_show';
 @import './partials/_edit';
+@import './partials/_createRestaurant';
 
 
 
