--- a/resources/scss/partials/_variables.scss
+++ b/resources/scss/partials/_variables.scss
@@ -1,6 +1,7 @@
 :root {
     --bs-emphasis-color-rgb: $header-color;
     /* sovrascrittura color bootstrap*/
+    --bs-btn-border-color:white;
 }
 
 
