add some style to color label

--- a/resources/scss/partials/_variables.scss
+++ b/resources/scss/partials/_variables.scss
@@ -9,6 +9,7 @@ $bg-main: #444;
 $header-bg: #1f17177b;
 $header-color: white;
 $boss-color: rgb(207, 4, 4);
+$second-color:rgb(49, 224, 49);
 $th-color:$boss-color;
 $homepage-color: white;
 $main-color: white;
