fix JS for MODALE message for erase dish, fix style scss create dish, introduce message edit/create/delete in dish index & restaurant index

--- a/resources/scss/app.scss
+++ b/resources/scss/app.scss
@@ -8,6 +8,7 @@
 @import './partials/_show';
 @import './partials/_edit';
 @import './partials/_createRestaurant';
+@import './partials/_createDish';
 @import './partials/_register';
 
 
