--- a/resources/scss/partials/_createDish.scss
+++ b/resources/scss/partials/_createDish.scss
@@ -1,7 +1,6 @@
 @import './variables';
 
-
-.container-create-restaurant {
+.container-create-dish {
     max-width: 700px;
 
     margin: 50px auto;
