--- a/resources/scss/partials/_index-main.scss
+++ b/resources/scss/partials/_index-main.scss
@@ -1,9 +1,18 @@
 @import './variables';
 
+.hide {
+    opacity: 0;
+    transition: opacity 4s;
+}
+
+.hidden {
+    display: none;
+}
 
 .index-main {
     background-color: $bg-main;
     color: $main-color;
+
 
     th {
         color: $th-color;
