FIX some layout edit/create/show of  restaurant/dishe, separate each js code for each view, now works all

--- a/resources/scss/partials/_createDish.scss
+++ b/resources/scss/partials/_createDish.scss
@@ -1,8 +1,7 @@
 @import './variables';
 
-.container-create-dish {
+.container-create-dish, .edit-dish {
     max-width: 700px;
-
     margin: 50px auto;
 
     .btn-group>.btn {
