--- a/resources/scss/partials/_edit.scss
+++ b/resources/scss/partials/_edit.scss
@@ -1,10 +1,31 @@
 @import './variables';
 
-.edit{
+.edit {
     max-width: 1000px;
     overflow-x: hidden;
     margin-top: 60px;
-    label{
-        color:$second-color;
+
+    label {
+        color: $second-color;
+    }
+
+    input[type=number] {
+        -moz-appearance: textfield;
+    }
+
+
+    input[type="number"]::-webkit-inner-spin-button,
+    input[type="number"]::-webkit-outer-spin-button {
+        -webkit-appearance: none;
+        margin: 0;
+    }
+}
+
+.edit-restaurant {
+    max-width: 700px;
+
+    .editR {
+        max-width: 500px;
+      
     }
 }
