--- a/resources/scss/partials/_header.scss
+++ b/resources/scss/partials/_header.scss
@@ -2,17 +2,18 @@
 
 .navbar{
     position: sticky;
-    // position: relative;
     z-index: 3;
     width: $maxwidth;
-    img{
-        max-width: 80%;
-    }
     background-color: $header-bg;
     color: $header-color;
+    // border: 2px solid green;
+    height: $header-h;
     .navbar-brand{
         width: 100px;
         margin: 0;
         padding: 0;
+        img{
+            max-width: 60%;
+        }
     }
 }
