change style index/create/edit restaurant

--- a/resources/scss/app.scss
+++ b/resources/scss/app.scss
@@ -6,7 +6,7 @@
 @import './partials/_dashboard';
 @import './partials/_index-main';
 @import './partials/_show';
-@import './partials/_edit';
+@import './partials/_editRestaurant';
 @import './partials/_createRestaurant';
 @import './partials/_createDish';
 @import './partials/_register';
