--- a/resources/scss/partials/_createRestaurant.scss
+++ b/resources/scss/partials/_createRestaurant.scss
@@ -6,7 +6,8 @@
 .container-create-dish,
 .container-edit-dish {
     max-width: 800px;
-    margin: 10px auto;
+    margin: 50px auto;
+    padding-bottom: 50px;
     background-color: $my-card-bg;
 
     h4 {
