--- a/resources/scss/partials/_variables.scss
+++ b/resources/scss/partials/_variables.scss
@@ -5,14 +5,14 @@
 }
 
 
-$bg-main: #444;
+$bg-main: #5d5d5d;
 $header-bg: #1f17177b;
 $header-color: white;
-$boss-color: rgb(207, 4, 4);
+$boss-color: rgba(179, 64, 64, 0.931);
 $second-color:rgb(49, 224, 49);
 $th-color:$boss-color;
 $homepage-color: white;
 $main-color: white;
 $maxwidth: 100%;
 $header-h: 80px;
-$my-card-bg:rgba(131, 224, 106, 0.142); 
+$my-card-bg:#333; 
