paginate dishe in dish index

--- a/resources/scss/partials/_variables.scss
+++ b/resources/scss/partials/_variables.scss
@@ -2,6 +2,7 @@
     --bs-emphasis-color-rgb: $header-color;
     /* sovrascrittura color bootstrap*/
     --bs-btn-border-color:white;
+    --bs-secondary-color:white;
 }
 
 
