implementate email, dont works

--- a/resources/scss/partials/_index-main.scss
+++ b/resources/scss/partials/_index-main.scss
@@ -9,6 +9,11 @@
     display: none;
 }
 
+.none{
+    color: #ee9e09;
+}
+
+
 .index-main {
     background-color: $bg-main;
     color: $main-color;
