--- a/resources/scss/app.scss
+++ b/resources/scss/app.scss
@@ -11,6 +11,7 @@
 @import './partials/_createDish';
 @import './partials/_register';
 @import './partials/_forbidden';
+@import './partials/_stats';
 
 
 
